loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: '<-' expected but ')' found.
for (compteur -> 1 to caseavancees)
                                  ^LoopFor:11: error: illegal start of simple expression
	}
        ^